--- a/main.css
+++ b/main.css
@@ -4,12 +4,16 @@ body{
   color:rgb(100,100,130);
 }
 
-button{width: 100%;
-  height:100%;
+button{
+  width: 100%;
 }
 
 h3{
   margin-top:0;
+}
+
+input:focus{
+    outline: 0;
 }
 
 input[type='number'] {
@@ -61,6 +65,9 @@ input[type=range]::-webkit-slider-thumb  {
   background: #ffffff;
   margin-top: -24px;
   box-shadow: 1px 1px 1px #000000, 0px 3px 3px #0d0d0d;
+  background-image: url("thumb-icon.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 input[type=range]::-moz-range-thumb {
